tests/ui/discord-frontend/entity_macro/expected_id.stderr
error: expected `id`
  --> tests/ui/discord-frontend/entity_macro/expected_id.rs:35:5
   |
LL |     expected_id = [],
   |     ^^^^^^^^^^^

error: aborting due to 1 previous error

